--- a/public/index.html
+++ b/public/index.html
@@ -461,9 +461,13 @@
     <div class="embed-responsive embed-responsive-16by9">
         <iframe class="embed-responsive-item" src="Ekika Ky'ekkobe.PDF.pdf" allowfullscreen></iframe>
     </div>
+    <br>
+    <p>Read through the minutes of our Get Together Family Meeting help on <strong>2nd December 2023</strong>.</p>
+
+    <div class="embed-responsive embed-responsive-16by9">
+      <iframe class="embed-responsive-item" src="GET TOGETHER FAMILY MEETING MINUTES.pdf" allowfullscreen></iframe>
+  </div>
 </section>
-
-
 
 <!-- Add a modal container to the body -->
 <div class="modal" id="memberModal" tabindex="-1" role="dialog">
@@ -712,7 +716,7 @@
 </section>
 
   <h2>Ancestral Home</h2>
-  <p>Our ancestral home belongs to the Late Reverend Enock Kyaluzi Ssebuliba and it is located at Kikungwe, a village in Kkingo, Bukoto County, Central Uganda.</p>
+  <p>Our ancestral home belongs to the Late Reverend Enock Kyaluzi Ssebuliba and it is located at Kikungwe, a village in Kimanya-Kabonera, Bukoto County, Central Uganda.</p>
 </section>
 
 
