--- a/public/index.html
+++ b/public/index.html
@@ -462,7 +462,7 @@
         <iframe class="embed-responsive-item" src="Ekika Ky'ekkobe.PDF.pdf" allowfullscreen></iframe>
     </div>
     <br>
-    <p>Read through the minutes of our Get Together Family Meeting help on <strong>2nd December 2023</strong>.</p>
+    <p>Read through the minutes of our Get Together Family Meeting held on <strong>2nd December 2023</strong>.</p>
 
     <div class="embed-responsive embed-responsive-16by9">
       <iframe class="embed-responsive-item" src="GET TOGETHER FAMILY MEETING MINUTES.pdf" allowfullscreen></iframe>
