--- a/public/index.html
+++ b/public/index.html
@@ -494,7 +494,7 @@
 <!-- Family Members Section -->
 <section id="family-members" class="container mt-5">
     <h2>Family Members</h2>
-    <p>The family of the Late Reverend Enock Kyaluzi Ssebuliba has grown into a large community. In addition to the late Reverend's children, the family has Viewed over the years with subsequent generations. </p>
+    <p>The family of the Late Reverend Enock Kyaluzi Ssebuliba has grown into a large community. In addition to the late Reverend's children, the family has expanded over the years with subsequent generations. </p>
 
     <!-- Explanation of Family Tree Colors -->
 <div style="margin-bottom: 10px;">
@@ -503,11 +503,11 @@
     <span style="margin-right: 15px; color: #17a2b8;">💙</span>: Parents<br>
     <span style="margin-right: 15px; color: #28a745;">💚</span>: Children<br>
     <span style="margin-right: 15px; color: #dc3545;">❤️</span>: Grandchildren<br>
-    <span style="margin-right: 15px; color: #ffa600;">🟠</span>: Great-Grandchildren<br>
+    <span style="margin-right: 15px; color: #ffa600;">💛</span>: Great-Grandchildren<br>
     <span style="color: #6c757d;">♥</span>: Beyond Great-Grandchildren<br>
   </p>
   <p>
-    <em>Note: The colours in the family tree are not merely for decoration; the deeper you go, the depth colour changes and it conveys meaningful insights about each individual's generational level.</em>
+    <strong>NB:</strong> <em>The colours in the family tree are not merely for decoration! In fact, the deeper you go, the more colourful it becomes but each depth of this Family Tree conveys meaningful insights about every individual's generational level.</em>
   </p>
 </div>
 
