--- a/public/index.html
+++ b/public/index.html
@@ -224,7 +224,7 @@
   <header id="header" class="d-flex align-items-center">
     <div class="container d-flex flex-column align-items-center">
 
-      <h2>PARTY ENDS IN:</h2>
+      <h2>NEXT MEETING STARTS IN:</h2>
       <div class="countdown d-flex justify-content-center" data-count="2024/06/30">
         <div>
           <h3>%d</h3>
