--- a/public/index.html
+++ b/public/index.html
@@ -314,8 +314,8 @@
 </head>
 
 <body>
-    <div class="leftcurtain"><img src="img/gate1.png" /></div>
-    <div class="rightcurtain"><img src="img/gate2.png" /></div>
+    <div class="leftcurtain"><img src="gate1.jpg" /></div>
+    <div class="rightcurtain"><img src="gate2.jpg" /></div>
     <a class="rope" href="" onclick="PlaySound()">
         <div style="font-size: 25px;text-shadow: 1px 1px 3px black, 1px 1px 3px black, -1px -1px 3px black, -1px -1px 3px black;color:#ff0000; font-weight: bold;"><br><b>Touch the Kkobe<br></b></div> <img src="img/arrow1.gif" height="auto" width="70px" style="animation: tada 0s infinite"><br>
         <img src="img/guda.png" width="70%" height="auto" style="animation: tada 7s infinite;" />
