--- a/public/index.html
+++ b/public/index.html
@@ -421,7 +421,7 @@ document.getElementById("demo").innerHTML = "A MERRY CHRISTMAS IN ADVANCE!<br> T
 
     
 // Add a Bootstrap button to go to the homepage
-document.getElementById("demo").innerHTML += "<br><button class='btn btn-primary' onclick='goToHomepage()'>Go to Home 🏠</button>";
+document.getElementById("demo").innerHTML += "<br><button class='btn btn-primary' onclick='goToHomepage()'><strong>Go to Home 🏠</strong></button>";
 
 
             // If the count down is finished, write some text 
