--- a/public/index.html
+++ b/public/index.html
@@ -384,7 +384,7 @@
             <p id="demo"></p>
         </div>
         <br>
-        <img src="img/chris25.png" width="90%" height="auto" style="animation: pulse 2s infinite;" />
+        <img src="chris25.png" width="90%" height="auto" style="animation: pulse 2s infinite;" />
         <br><br>
         <img src="img/fastp1.gif" width="100%" height="100%" style="animation: tada 0s infinite;" />
         <br><br>
