--- a/public/index.html
+++ b/public/index.html
@@ -431,8 +431,8 @@ document.getElementById("demo").innerHTML += "<br><button class='btn btn-primary
             }
         }, 1000);
     </script>
-            <audio id="audiocracker" src="img/song1.mp3" autostart="false"></audio>
-            <script>
+<audio id="audiocracker" src="img/song1.mp3" loop></audio>
+<script>
                 function PlaySound() {
                     var sound = document.getElementById("audiocracker");
                     sound.play()
