--- a/public/index.html
+++ b/public/index.html
@@ -416,8 +416,8 @@
             var seconds = Math.floor((distance % (1000 * 60)) / 1000);
 
 // Display the result in the element with id="demo"
-document.getElementById("demo").innerHTML = "A MERRY CHRISTMAS IN ADVANCE!<br> Time remaining:<br> " + days + "<font color='red'> Days,</font> " + hours + "<font color='red'>  Hrs,</font> " +
-    minutes + "<font color='red'> Min,<br></font> " + seconds + "<font color='red'> Secs. </font> ";
+document.getElementById("demo").innerHTML = "A MERRY CHRISTMAS IN ADVANCE!<br> Time remaining:<br> " + days + "<font color='red'> Days,</font> " + hours + "<font color='red'>  Hours,</font> " +
+    minutes + "<font color='red'> Minutes,<br></font> " + seconds + "<font color='red'> Seconds. </font> ";
 
     
 // Add a Bootstrap button to go to the homepage
