--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
         <script>
             function goToHomepage() {
                 // Change the URL to your homepage URL
-                window.location.href = "homepage.html";
+                window.location.href = "https://ssebuliba.vercel.app";
             }
         </script>
 <!-- Add these lines to include Bootstrap CSS and JavaScript -->
@@ -23,6 +23,7 @@
     <title>The Ssebulibas Christmas Wishes</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <style>
+              
         body {
             background: #fff;
         }
@@ -128,7 +129,51 @@
             color: #98201f;
             animation: flash 0s infinite;
         }
+              #snowflakeContainer {
+                position: absolute;
+                left: 0;
+                top: 0;
+                pointer-events: none
+            }
+
+            .snowflake {
+                position: fixed;
+                user-select: none;
+                z-index: 1000;
+                color: #ffffff;
+                opacity: .8;
+                pointer-events: none
+            }
+
+            @keyframes fall {
+                0% {
+                    top: -10%
+                }
+                100% {
+                    top: 100%
+                }
+            }
     </style>
+      <div id="snowflakeContainer"></div>
+        <script>
+            const snowflakeContainer = document.getElementById("snowflakeContainer");
+            let snowflakes = [];
+            const numberOfSnowflakes = 20,
+                characters = ["❅", "❆"];
+
+            function createSnowflake() {
+                let e = document.createElement("div");
+                e.className = "snowflake", e.textContent = characters[Math.floor(Math.random() * characters.length)], e.style.fontSize = `${12+20*Math.random()}px`, e.style.left = `${100*Math.random()}%`, e.style.animationDuration = `${5+5*Math.random()}s`, e.style.animationName = "fall", e.style.animationIterationCount = "infinite", snowflakeContainer.appendChild(e)
+            }
+
+            function updateSnowflakes() {
+                snowflakes.forEach(e => {
+                    parseInt(e.style.top, 10) > window.innerHeight && (e.style.top = "-25px")
+                }), requestAnimationFrame(updateSnowflakes)
+            }
+            for (let i = 0; i < 30; i++) createSnowflake(), snowflakes.push(snowflakeContainer.lastChild);
+            updateSnowflakes();
+        </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="slide.js" type="text/javascript"></script>
     <script type="text/javascript">
@@ -314,8 +359,8 @@
 </head>
 
 <body>
-    <div class="leftcurtain"><img src="gate1.jpg" /></div>
-    <div class="rightcurtain"><img src="gate2.jpg" /></div>
+    <div class="leftcurtain"><img src="img/gate1.png" /></div>
+    <div class="rightcurtain"><img src="img/gate2.png" /></div>
     <a class="rope" href="" onclick="PlaySound()">
         <div style="font-size: 25px;text-shadow: 1px 1px 3px black, 1px 1px 3px black, -1px -1px 3px black, -1px -1px 3px black;color:#ff0000; font-weight: bold;"><br><b>Touch the Kkobe<br></b></div> <img src="img/arrow1.gif" height="auto" width="70px" style="animation: tada 0s infinite"><br>
         <img src="img/guda.png" width="70%" height="auto" style="animation: tada 7s infinite;" />
@@ -384,7 +429,7 @@
             <p id="demo"></p>
         </div>
         <br>
-        <img src="chris25.png" width="90%" height="auto" style="animation: pulse 2s infinite;" />
+        <img src="img/chris25.png" width="90%" height="auto" style="animation: pulse 2s infinite;" />
         <br><br>
         <img src="img/fastp1.gif" width="100%" height="100%" style="animation: tada 0s infinite;" />
         <br><br>
@@ -416,12 +461,12 @@
             var seconds = Math.floor((distance % (1000 * 60)) / 1000);
 
 // Display the result in the element with id="demo"
-document.getElementById("demo").innerHTML = "A MERRY CHRISTMAS IN ADVANCE!<br> Time remaining:<br> " + days + "<font color='red'> Days,</font> " + hours + "<font color='red'>  Hours,</font> " +
-    minutes + "<font color='red'> Minutes,<br></font> " + seconds + "<font color='red'> Seconds. </font> ";
+document.getElementById("demo").innerHTML = "A MERRY CHRISTMAS IN ADVANCE!<br> Time remaining:<br> " + days + "<font color='red'> Days,</font> " + hours + "<font color='red'>  Hrs,</font> " +
+    minutes + "<font color='red'> Min,<br></font> " + seconds + "<font color='red'> Secs. </font> ";
 
     
 // Add a Bootstrap button to go to the homepage
-document.getElementById("demo").innerHTML += "<br><button class='btn btn-primary' onclick='goToHomepage()'><strong>Go to Home 🏠</strong></button>";
+document.getElementById("demo").innerHTML += "<br><button class='btn btn-primary' onclick='goToHomepage()'>Go to Home 🏠</button>";
 
 
             // If the count down is finished, write some text 
@@ -431,8 +476,8 @@ document.getElementById("demo").innerHTML += "<br><button class='btn btn-primary
             }
         }, 1000);
     </script>
-<audio id="audiocracker" src="img/song1.mp3" loop></audio>
-<script>
+            <audio id="audiocracker" src="img/song1.mp3" autostart="false"></audio>
+            <script>
                 function PlaySound() {
                     var sound = document.getElementById("audiocracker");
                     sound.play()
