--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
         <script>
             function goToHomepage() {
                 // Change the URL to your homepage URL
-                window.location.href = "https://ssebuliba.vercel.app";
+                window.location.href = "homepage.html";
             }
         </script>
 <!-- Add these lines to include Bootstrap CSS and JavaScript -->
@@ -23,7 +23,6 @@
     <title>The Ssebulibas Christmas Wishes</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <style>
-              
         body {
             background: #fff;
         }
@@ -129,7 +128,7 @@
             color: #98201f;
             animation: flash 0s infinite;
         }
-              #snowflakeContainer {
+        #snowflakeContainer {
                 position: absolute;
                 left: 0;
                 top: 0;
@@ -359,8 +358,8 @@
 </head>
 
 <body>
-    <div class="leftcurtain"><img src="img/gate1.png" /></div>
-    <div class="rightcurtain"><img src="img/gate2.png" /></div>
+    <div class="leftcurtain"><img src="gate1.jpg" /></div>
+    <div class="rightcurtain"><img src="gate2.jpg" /></div>
     <a class="rope" href="" onclick="PlaySound()">
         <div style="font-size: 25px;text-shadow: 1px 1px 3px black, 1px 1px 3px black, -1px -1px 3px black, -1px -1px 3px black;color:#ff0000; font-weight: bold;"><br><b>Touch the Kkobe<br></b></div> <img src="img/arrow1.gif" height="auto" width="70px" style="animation: tada 0s infinite"><br>
         <img src="img/guda.png" width="70%" height="auto" style="animation: tada 7s infinite;" />
@@ -429,7 +428,7 @@
             <p id="demo"></p>
         </div>
         <br>
-        <img src="img/chris25.png" width="90%" height="auto" style="animation: pulse 2s infinite;" />
+        <img src="chris25.png" width="90%" height="auto" style="animation: pulse 2s infinite;" />
         <br><br>
         <img src="img/fastp1.gif" width="100%" height="100%" style="animation: tada 0s infinite;" />
         <br><br>
@@ -461,12 +460,12 @@
             var seconds = Math.floor((distance % (1000 * 60)) / 1000);
 
 // Display the result in the element with id="demo"
-document.getElementById("demo").innerHTML = "A MERRY CHRISTMAS IN ADVANCE!<br> Time remaining:<br> " + days + "<font color='red'> Days,</font> " + hours + "<font color='red'>  Hrs,</font> " +
-    minutes + "<font color='red'> Min,<br></font> " + seconds + "<font color='red'> Secs. </font> ";
+document.getElementById("demo").innerHTML = "A MERRY CHRISTMAS IN ADVANCE!<br> Time remaining:<br> " + days + "<font color='red'> Days,</font> " + hours + "<font color='red'>  Hours,</font> " +
+    minutes + "<font color='red'> Minutes,<br></font> " + seconds + "<font color='red'> Seconds. </font> ";
 
     
 // Add a Bootstrap button to go to the homepage
-document.getElementById("demo").innerHTML += "<br><button class='btn btn-primary' onclick='goToHomepage()'>Go to Home 🏠</button>";
+document.getElementById("demo").innerHTML += "<br><button class='btn btn-primary' onclick='goToHomepage()'><strong>Go to Home 🏠</strong></button>";
 
 
             // If the count down is finished, write some text 
@@ -476,8 +475,8 @@ document.getElementById("demo").innerHTML += "<br><button class='btn btn-primary
             }
         }, 1000);
     </script>
-            <audio id="audiocracker" src="img/song1.mp3" autostart="false"></audio>
-            <script>
+<audio id="audiocracker" src="img/song1.mp3" loop></audio>
+<script>
                 function PlaySound() {
                     var sound = document.getElementById("audiocracker");
                     sound.play()
